--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@
 	overflow-x: hidden; 
 	scrollbar-width: none;
   }
-  
+  *::-webkit-scrollbar {
+        display:none;
+  }
+
   body {
 	height: 100vh;
 	margin: auto;
