--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
   * {
 	background-color: #06060B;
 	cursor: none;
-	overflow-y: hidden; 
-	overflow-x: hidden; 
-	scrollbar-width: none;
   }
-  *::-webkit-scrollbar {
-        display:none;
-  }
+html {
+  overflow:   scroll;
+}
+
+*::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
 
   body {
 	height: 100vh;
