--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
   overflow:   scroll;
 }
 
-*::-webkit-scrollbar {
+body::-webkit-scrollbar {
     width: 0px;
     background: transparent; /* make scrollbar transparent */
 }
