--- a/style.css
+++ b/style.css
@@ -6,11 +6,10 @@ html {
   overflow:   scroll;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 0px;
     background: transparent; /* make scrollbar transparent */
 }
-
   body {
 	height: 100vh;
 	margin: auto;
