--- a/style.css
+++ b/style.css
@@ -2,7 +2,14 @@
 	background-color: #06060B;
 	cursor: none;
   }
+html {
+  overflow:   scroll;
+}
 
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
   body {
 	height: 100vh;
 	margin: auto;
